Initialize users router
